...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prisijungti.Prisijungti">

    <EditText
        android:id="@+id/prisijungtiVardas"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="Vartotojo vardas"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/slaptazodisPrisijungti"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Slaptažodis"
        android:inputType="textPassword"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/prisijungtiButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="75dp"
...
            android:padding="16dp"
            android:text="Mokinys"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/korRadio"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
...
