...
            android:hint="Kaina per val."
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:theme="@style/TextInputLayoutAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pasirinktiDalykai" />

        <CheckBox
            android:id="@+id/checkBoxGyvai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
...
            app:layout_constraintEnd_toStartOf="@+id/checkBoxOnline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Spinner
            android:id="@+id/spinnerDalykai"
            android:layout_width="333dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:entries="@array/spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/buttonPridėti"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_shape"
            android:text="Pridėti"
...
