...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sukurti_profili"
            android:icon="@drawable/ic_round_add_circle_outline_24"
            android:title="Sukurti profilį" />
        <item
            android:id="@+id/nav_pagrindinis"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="Pagrindinis" />
...
